acertando o caminho homepage no json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tarfas",
   "version": "0.1.0",
   "private": true,
-  "homepages":"tarfas/",
+  "homepages":"Tarfas/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
